# USBProxy

./: .gitignore  AUTHORS  CODEOWNERS  README.md  TODO.md  install-libusb.sh  install-msgpack.sh  install-zeromq.sh  install.sh  sigint.sh  sigkill.sh  sigterm.sh
.devcontainer/: Dockerfile  devcontainer.json
.github/: create-release.sh  install-release-tools.sh
.github/workflows/: build-app-nightly.yaml  build-app-release.yaml  build-app.yaml  build-aptly.yaml  build-container.yml  build-deps.yaml  build-toolchain.yaml  build.yaml
aptly/: .env.example  .gitignore  Dockerfile  aptly.conf  build.sh
docker-crosstool-ng-arm/: .gitignore  Dockerfile  README.md  build-binary.sh  docker-compose.yml
docker-crosstool-ng-arm/config/: arm.config  meson-cross-file.txt  raspberry_pi_3_b_plus.cmake.tc
docker-crosstool-ng-arm/docker/: app.Dockerfile  deps.Dockerfile  toolchain.Dockerfile
docker-crosstool-ng-arm/fixes/: 140-mpc.sh  CMakeLists.txt  project-config.jam
nodejs-client/: delimiter_example.js  index.js  package-lock.json  package.json
rpi-scripts/: add.sh  extract.sh  go.sh  init.sh  install-all-dependencies.sh  install-aws-greengrass-sdk.sh  install-repo.sh  link.sh  run.sh
scripts/: install-dependencies.sh  install-from-release.sh  usb-mitm-samsung.sh  usb-mitm.sh
src/: CMakeLists.txt
src/debian/: changelog  control  files  postinst  postrm  rules
src/greengrass/: CMakeLists.txt  main.cpp
src/lib/: CMakeLists.txt  ConfigParser.cpp  Device.cpp  DeviceProxy.h  HostProxy.h  Injector.cpp  Injector.h  Interface.cpp  Manager.cpp  Manager.h  PacketFilter.h  PluginManager.cpp  PluginManager.h  Proxy.h  RelayReader.cpp  RelayReader.h  RelayWriter.cpp  (+2 more)
src/tools/: CMakeLists.txt  usb-mitm.cpp
(+21 files in other folders)
